QueryAntlr/HqlParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Hql.g4 by ANTLR 4.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419



using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6")]
[System.CLSCompliant(false)]
public partial class HqlParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, AND=3, OR=4, NOT=5, DATETIME=6, TIME=7, DATE=8, PHRASE=9, 
		INT=10, POSITIVE_INT=11, FLOAT=12, IDENTIFIER=13, WORD=14, TILDE=15, EXISTS=16, 
		STRINGLITERAL=17, EQ=18, RANGE=19, CONTAINS=20, SEARCH=21, WS=22;
	public const int
		RULE_query = 0, RULE_complexExpr = 1, RULE_termExpr = 2, RULE_existsExpr = 3, 
		RULE_rangeExpr = 4, RULE_and = 5, RULE_or = 6, RULE_not = 7, RULE_eq = 8, 
		RULE_range = 9, RULE_contains = 10, RULE_search = 11, RULE_dateValue = 12, 
		RULE_floatValue = 13, RULE_intValue = 14, RULE_date = 15, RULE_time = 16, 
		RULE_term = 17, RULE_phrase = 18, RULE_field = 19, RULE_phraseOptions = 20, 
		RULE_numberValue = 21, RULE_stringValue = 22, RULE_value = 23;
	public static readonly string[] ruleNames = {
		"query", "complexExpr", "termExpr", "existsExpr", "rangeExpr", "and", 
		"or", "not", "eq", "range", "contains", "search", "dateValue", "floatValue", 
		"intValue", "date", "time", "term", "phrase", "field", "phraseOptions", 
		"numberValue", "stringValue", "value"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "')'", null, null, null, null, null, null, null, null, null, 
		null, null, null, "'~'", "'?'", null, null, null, "'contains'", "'search'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, "AND", "OR", "NOT", "DATETIME", "TIME", "DATE", "PHRASE", 
		"INT", "POSITIVE_INT", "FLOAT", "IDENTIFIER", "WORD", "TILDE", "EXISTS", 
		"STRINGLITERAL", "EQ", "RANGE", "CONTAINS", "SEARCH", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Hql.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	static HqlParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

	public HqlParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class QueryContext : ParserRuleContext {
		public ComplexExprContext complexExpr() {
			return GetRuleContext<ComplexExprContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(HqlParser.Eof, 0); }
		public QueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_query; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHqlVisitor<TResult> typedVisitor = visitor as IHqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQuery(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QueryContext query() {
		QueryContext _localctx = new QueryContext(Context, State);
		EnterRule(_localctx, 0, RULE_query);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48; complexExpr(0);
			State = 49; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ComplexExprContext : ParserRuleContext {
		public ComplexExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_complexExpr; } }
	 
		public ComplexExprContext() { }
		public virtual void CopyFrom(ComplexExprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class BracesComplexExpressionContext : ComplexExprContext {
		public ComplexExprContext complexExpr() {
			return GetRuleContext<ComplexExprContext>(0);
		}
		public BracesComplexExpressionContext(ComplexExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHqlVisitor<TResult> typedVisitor = visitor as IHqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBracesComplexExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MultipleComplexExpressionContext : ComplexExprContext {
		public ComplexExprContext[] complexExpr() {
			return GetRuleContexts<ComplexExprContext>();
		}
		public ComplexExprContext complexExpr(int i) {
			return GetRuleContext<ComplexExprContext>(i);
		}
		public MultipleComplexExpressionContext(ComplexExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHqlVisitor<TResult> typedVisitor = visitor as IHqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMultipleComplexExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RangeExpressionContext : ComplexExprContext {
		public RangeExprContext rangeExpr() {
			return GetRuleContext<RangeExprContext>(0);
		}
		public RangeExpressionContext(ComplexExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHqlVisitor<TResult> typedVisitor = visitor as IHqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRangeExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AndComplexExpressionContext : ComplexExprContext {
		public ComplexExprContext[] complexExpr() {
			return GetRuleContexts<ComplexExprContext>();
		}
		public ComplexExprContext complexExpr(int i) {
			return GetRuleContext<ComplexExprContext>(i);
		}
		public AndContext and() {
			return GetRuleContext<AndContext>(0);
		}
		public AndComplexExpressionContext(ComplexExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHqlVisitor<TResult> typedVisitor = visitor as IHqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAndComplexExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OrComplexExpressionContext : ComplexExprContext {
		public ComplexExprContext[] complexExpr() {
			return GetRuleContexts<ComplexExprContext>();
		}
		public ComplexExprContext complexExpr(int i) {
			return GetRuleContext<ComplexExprContext>(i);
		}
		public OrContext or() {
			return GetRuleContext<OrContext>(0);
		}
		public OrComplexExpressionContext(ComplexExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHqlVisitor<TResult> typedVisitor = visitor as IHqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOrComplexExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NotComplexExpressionContext : ComplexExprContext {
		public NotContext not() {
			return GetRuleContext<NotContext>(0);
		}
		public ComplexExprContext complexExpr() {
			return GetRuleContext<ComplexExprContext>(0);
		}
		public NotComplexExpressionContext(ComplexExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHqlVisitor<TResult> typedVisitor = visitor as IHqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNotComplexExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class TermExpressionContext : ComplexExprContext {
		public TermExprContext termExpr() {
			return GetRuleContext<TermExprContext>(0);
		}
		public ExistsExprContext existsExpr() {
			return GetRuleContext<ExistsExprContext>(0);
		}
		public TermExpressionContext(ComplexExprContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHqlVisitor<TResult> typedVisitor = visitor as IHqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTermExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ComplexExprContext complexExpr() {
		return complexExpr(0);
	}

	private ComplexExprContext complexExpr(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ComplexExprContext _localctx = new ComplexExprContext(Context, _parentState);
		ComplexExprContext _prevctx = _localctx;
		int _startState = 2;
		EnterRecursionRule(_localctx, 2, RULE_complexExpr, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 62;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				{
				_localctx = new BracesComplexExpressionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;

				State = 52; Match(T__0);
				State = 53; complexExpr(0);
				State = 54; Match(T__1);
				}
				break;
			case 2:
				{
				_localctx = new NotComplexExpressionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 56; not();
				State = 57; complexExpr(5);
				}
				break;
			case 3:
				{
				_localctx = new TermExpressionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 59; termExpr();
				}
				break;
			case 4:
				{
				_localctx = new TermExpressionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 60; existsExpr();
				}
				break;
			case 5:
				{
				_localctx = new RangeExpressionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 61; rangeExpr();
				}
				break;
			}
			Context.Stop = TokenStream.LT(-1);
			State = 76;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 74;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
					case 1:
						{
						_localctx = new AndComplexExpressionContext(new ComplexExprContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_complexExpr);
						State = 64;
						if (!(Precpred(Context, 7))) throw new FailedPredicateException(this, "Precpred(Context, 7)");
						State = 65; and();
						State = 66; complexExpr(8);
						}
						break;
					case 2:
						{
						_localctx = new OrComplexExpressionContext(new ComplexExprContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_complexExpr);
						State = 68;
						if (!(Precpred(Context, 6))) throw new FailedPredicateException(this, "Precpred(Context, 6)");
						State = 69; or();
						State = 70; complexExpr(7);
						}
						break;
					case 3:
						{
						_localctx = new MultipleComplexExpressionContext(new ComplexExprContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_complexExpr);
						State = 72;
						if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
						State = 73; complexExpr(2);
						}
						break;
					}
					} 
				}
				State = 78;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class TermExprContext : ParserRuleContext {
		public FieldContext field() {
			return GetRuleContext<FieldContext>(0);
		}
		public EqContext eq() {
			return GetRuleContext<EqContext>(0);
		}
		public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public ContainsContext contains() {
			return GetRuleContext<ContainsContext>(0);
		}
		public SearchContext search() {
			return GetRuleContext<SearchContext>(0);
		}
		public TermExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_termExpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHqlVisitor<TResult> typedVisitor = visitor as IHqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTermExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TermExprContext termExpr() {
		TermExprContext _localctx = new TermExprContext(Context, State);
		EnterRule(_localctx, 4, RULE_termExpr);
		try {
			State = 92;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 79; field();
				State = 80; eq();
				State = 81; value();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 83; field();
				State = 84; contains();
				State = 85; value();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 87; field();
				State = 88; search();
				State = 89; value();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 91; value();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExistsExprContext : ParserRuleContext {
		public FieldContext field() {
			return GetRuleContext<FieldContext>(0);
		}
		public ITerminalNode EXISTS() { return GetToken(HqlParser.EXISTS, 0); }
		public ExistsExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_existsExpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHqlVisitor<TResult> typedVisitor = visitor as IHqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExistsExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExistsExprContext existsExpr() {
		ExistsExprContext _localctx = new ExistsExprContext(Context, State);
		EnterRule(_localctx, 6, RULE_existsExpr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94; field();
			State = 95; Match(EXISTS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RangeExprContext : ParserRuleContext {
		public FieldContext field() {
			return GetRuleContext<FieldContext>(0);
		}
		public RangeContext range() {
			return GetRuleContext<RangeContext>(0);
		}
		public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public RangeExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rangeExpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHqlVisitor<TResult> typedVisitor = visitor as IHqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRangeExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RangeExprContext rangeExpr() {
		RangeExprContext _localctx = new RangeExprContext(Context, State);
		EnterRule(_localctx, 8, RULE_rangeExpr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97; field();
			State = 98; range();
			State = 99; value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AndContext : ParserRuleContext {
		public ITerminalNode AND() { return GetToken(HqlParser.AND, 0); }
		public AndContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_and; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHqlVisitor<TResult> typedVisitor = visitor as IHqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAnd(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AndContext and() {
		AndContext _localctx = new AndContext(Context, State);
		EnterRule(_localctx, 10, RULE_and);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101; Match(AND);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OrContext : ParserRuleContext {
		public ITerminalNode OR() { return GetToken(HqlParser.OR, 0); }
		public OrContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_or; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHqlVisitor<TResult> typedVisitor = visitor as IHqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OrContext or() {
		OrContext _localctx = new OrContext(Context, State);
		EnterRule(_localctx, 12, RULE_or);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103; Match(OR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NotContext : ParserRuleContext {
		public ITerminalNode NOT() { return GetToken(HqlParser.NOT, 0); }
		public NotContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_not; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHqlVisitor<TResult> typedVisitor = visitor as IHqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNot(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NotContext not() {
		NotContext _localctx = new NotContext(Context, State);
		EnterRule(_localctx, 14, RULE_not);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 105; Match(NOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EqContext : ParserRuleContext {
		public ITerminalNode EQ() { return GetToken(HqlParser.EQ, 0); }
		public EqContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_eq; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHqlVisitor<TResult> typedVisitor = visitor as IHqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEq(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EqContext eq() {
		EqContext _localctx = new EqContext(Context, State);
		EnterRule(_localctx, 16, RULE_eq);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107; Match(EQ);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RangeContext : ParserRuleContext {
		public ITerminalNode RANGE() { return GetToken(HqlParser.RANGE, 0); }
		public RangeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_range; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHqlVisitor<TResult> typedVisitor = visitor as IHqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRange(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RangeContext range() {
		RangeContext _localctx = new RangeContext(Context, State);
		EnterRule(_localctx, 18, RULE_range);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109; Match(RANGE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ContainsContext : ParserRuleContext {
		public ITerminalNode CONTAINS() { return GetToken(HqlParser.CONTAINS, 0); }
		public ContainsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_contains; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHqlVisitor<TResult> typedVisitor = visitor as IHqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitContains(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ContainsContext contains() {
		ContainsContext _localctx = new ContainsContext(Context, State);
		EnterRule(_localctx, 20, RULE_contains);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111; Match(CONTAINS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SearchContext : ParserRuleContext {
		public ITerminalNode SEARCH() { return GetToken(HqlParser.SEARCH, 0); }
		public SearchContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_search; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHqlVisitor<TResult> typedVisitor = visitor as IHqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSearch(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SearchContext search() {
		SearchContext _localctx = new SearchContext(Context, State);
		EnterRule(_localctx, 22, RULE_search);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 113; Match(SEARCH);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DateValueContext : ParserRuleContext {
		public ITerminalNode DATETIME() { return GetToken(HqlParser.DATETIME, 0); }
		public DateValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dateValue; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHqlVisitor<TResult> typedVisitor = visitor as IHqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDateValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DateValueContext dateValue() {
		DateValueContext _localctx = new DateValueContext(Context, State);
		EnterRule(_localctx, 24, RULE_dateValue);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 115; Match(DATETIME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FloatValueContext : ParserRuleContext {
		public ITerminalNode FLOAT() { return GetToken(HqlParser.FLOAT, 0); }
		public FloatValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_floatValue; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHqlVisitor<TResult> typedVisitor = visitor as IHqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFloatValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FloatValueContext floatValue() {
		FloatValueContext _localctx = new FloatValueContext(Context, State);
		EnterRule(_localctx, 26, RULE_floatValue);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117; Match(FLOAT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IntValueContext : ParserRuleContext {
		public ITerminalNode INT() { return GetToken(HqlParser.INT, 0); }
		public IntValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_intValue; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHqlVisitor<TResult> typedVisitor = visitor as IHqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIntValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IntValueContext intValue() {
		IntValueContext _localctx = new IntValueContext(Context, State);
		EnterRule(_localctx, 28, RULE_intValue);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119; Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DateContext : ParserRuleContext {
		public ITerminalNode DATE() { return GetToken(HqlParser.DATE, 0); }
		public DateContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_date; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IHqlVisitor<TResult> typedVisitor = visitor as IHqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDate(this);
			else return visitor.VisitChildren(this);
		}
	}
